[gd_scene load_steps=3 format=3 uid="uid://d4d3qe4rm77wx"]

[ext_resource type="Script" uid="uid://c3cri3fixnvyi" path="res://animatronic.gd" id="1_7i4vx"]
[ext_resource type="AudioStream" uid="uid://dwbxxphirf3n8" path="res://sounds/jumpscare.mp3" id="2_ck8in"]

[node name="Ricky" type="Node" node_paths=PackedStringArray("move_timer", "kill_timer", "kill_sound")]
script = ExtResource("1_7i4vx")
nickname = "Ricky"
move_timer = NodePath("MoveTimer")
kill_timer = NodePath("KillTimer")
kill_sound = NodePath("KillSound")
metadata/_custom_type_script = "uid://c3cri3fixnvyi"

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="KillTimer" type="Timer" parent="."]
wait_time = 0.203

[node name="KillSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ck8in")
volume_db = -19.065
pitch_scale = 1.73

[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="timeout" from="KillTimer" to="." method="_on_kill_timer_timeout"]
